[package]
name = "xsched"
version = "0.1.0"
authors = ["Alex Norman <alex@x37v.info>"]
edition = "2018"

[lib]
name = "xsched"
path = "src/lib.rs"

[[bin]]
name = "xsched"
path = "src/main.rs"

[dependencies]
sched = { path = "../sched" }
jack = "0.6.5"
oscquery = { path = "../../oscquery-rs" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
ctrlc = "3.1.7"
num = "0.3.1"

[build-dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.24"
